--- a/RiotApp/app/src/main/AndroidManifest.xml
+++ b/RiotApp/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -14,25 +15,27 @@
         android:roundIcon="@mipmap/ic_egg_one"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".HomeActivity" android:exported="true">
-        </activity>
-
+        <activity
+            android:name=".HomeActivity"
+            android:exported="true"></activity>
         <activity android:name=".MMR_ResultsActivity" />
-
-        <activity android:name=".LoginActivity" android:exported="true" android:label="@string/title_activity_login" android:theme="@style/AppTheme.Dark">
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:label="@string/title_activity_login"
+            android:theme="@style/AppTheme.Dark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".SignupActivity"
             android:exported="true"
             android:label="@string/title_activity_login"
             android:theme="@style/AppTheme.Dark" />
+        <activity android:name=".UserProfileActivity"></activity>
     </application>
 
 </manifest>
