Added Display result functionality
-added ability to pass string and int variables to multiple activities
-created new class to display results from calculation
-commented code

--- a/RiotApp/app/src/main/AndroidManifest.xml
+++ b/RiotApp/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             android:name=".HomeActivity"
             android:exported="true"></activity>
         <activity android:name=".MMR_ResultsActivity" />
+        <activity android:name=".DisplayResult"/>
         <activity
             android:name=".LoginActivity"
             android:exported="true"
