--- a/RiotApp/app/build.gradle
+++ b/RiotApp/app/build.gradle
@@ -20,7 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
     testCompile 'junit:junit:4.12'
+    compile files('libs/ThatTastedPurple.jar')
+    compile files('libs/gson-2.6.2.jar')
 }
